<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity" >
    
    <ImageView
        android:id="@+id/ivLogoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_estacione"
        android:layout_gravity="center" 
        android:contentDescription="@string/descricao_logo"/>
    
     <TextView
        android:id="@+id/tvComplementoLogoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complemento_logo"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/edNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_a" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_a"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha" 
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha_a"
        android:inputType="textPassword"/>
    
    <TextView 
        android:id="@+id/tvCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:gravity="center"
        android:background="@drawable/botao"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
