<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    tools:context=".PrincipalActivity" >
    
    <LinearLayout 
     android:id="@+id/llDadosUsuario"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="3"
     android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">
     
        <ImageView
        android:id="@+id/ivLogoPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_estacione"
        android:layout_gravity="center"
        android:contentDescription="@string/descricao_logo"/>
        
         <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complemento_logo"
        android:layout_gravity="center"
        android:gravity="center" />
        
        <TextView 
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            />
        
    </LinearLayout>
    
	
    <LinearLayout 
     android:id="@+id/llInformacoes"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1">
        
        <LinearLayout 
    	    android:id="@+id/llConteudo"
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:orientation="vertical"
    	    android:layout_gravity="center"
    	    android:gravity="center"
    	    android:padding="7dp">
    	    
            <TextView 
            android:id="@+id/tvConteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conteudo"
            android:layout_gravity="center"
            android:gravity="center"
            />
       	    
    	</LinearLayout>
        
    	<LinearLayout 
    	    android:id="@+id/llPublicidade"
    	    android:layout_width="match_parent"
    	    android:layout_height="match_parent"
    	    android:layout_weight="3"
    	    android:orientation="vertical" 
    	    android:layout_gravity="center"
    	    android:gravity="center"
    	    android:padding="7dp">
            
    	    <TextView 
            android:id="@+id/tvPublicidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publicidade"
            android:gravity="center"
            android:layout_gravity="center"
            />
       	    
    	</LinearLayout>
        
    </LinearLayout>
    
    
</LinearLayout>
